# 20260707_SlopeSaver

./: .gitignore  main.py  pyproject.toml  test.txt
config/: default_app_config.json  default_calibration_preparation.json  last_app_config.json  last_calibration_preparation.json
scripts/: generate_graph_base_image.py  generate_one_daily_snapshot.py
src/application/buffers/: frame_buffer.py
src/application/mappers/: recursive_mapper.py
src/application/repositories/: app_config_repository.py  calibration_preparation_result_repository.py  measurement_evaluation_result_repository.py  measurement_snapshot_csv_repository.py  projection_alignment_result_repository.py  slope_computation_result_repository.py
src/application/usecases/: calibration_homography_usecase.py  camera_capture_usecase.py  capture_with_single_led_usecase.py  compute_measurement_evaluation_from_led_world_usecase.py  compute_measurement_evaluation_usecase.py  detect_red_light_usecase.py  frame_display_usecase.py  full_reflection_measurement_usecase.py  high_exposure_capture_usecase.py  initialize_app_config_usecase.py  led_initialize_usecase.py  save_measurement_evaluation_result_usecase.py  save_measurement_results_usecase.py  save_measurement_snapshot_line_usecase.py  save_picture_usecase.py  set_exposure_usecase.py  set_roi_usecase.py  start_camera_usecase.py  turn_off_all_leds_usecase.py  turn_on_all_leds_usecase.py  turn_only_led_usecase.py
src/domain/aggregates/: app_config.py  calibration_preparation_result.py  (+3 more)
src/logger/: logger.py
src/shared/: shared_evaluation.py  shared_graph_data.py
(+73 files in other folders)
